  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, ianmkenney, PicoCentauri, pgbarletta, p-j-smith, richardjgowers

 * 2.7.0

Fixes
  * Fix `NoJump` unwrapping for jumps on the second frame in a
    trajectory (PR #4258, Issue #4257)
  * Deprecated np.float_ and np.NaN aliases have been replaced with
    their original type value (np.float64 and np.nan) (PR #4272)
  * Fixes a case where qcprot.CalcRMSDRotationalMatrix would return a
    RMSD of None

Enhancements
  * Updated lib.qcprot.CalcRMSDRotationalMatrix to accept either float32 or float64
    inputs
  * Added a warning about charge neutrality to the documentation of
    `DielectricConstant` (Issue #4262, PR #4263)
  * Add support for reading chainID info from prmtop amber topologies (PR #4007)

Changes
  * The `mda-xdrlib` module is now a core dependency of MDAnalysis
    replacing the now deprecated `xdrlib` core Python library
    (PR #4271)
  * ConverterBase class moved from coordinates/base.py to converters/base.py (Issue #3404)

Deprecations
  * coordinates.base.ConverterBase has been deprecated and will be removed in 3.0.0;
    use converters.base.ConvertBase instead (Issue #3404)


28/08/23 IAlibay, hmacdope, pillose, jaclark5, tylerjereddy

 * 2.6.1

Fixes
  * Fix Atom type guessing error (PR #4168, Issue #4167)

Enhancements
  * Allow `set_dimensions` transformation to handle NPT trajectories (PR #4258)

Changes
  * Reverts PR #4108, builds are now again made using the oldest
    supported NumPy version.
  * NumPy `in1d` replaced with `isin` in preparation for NumPy
    `2.0` (PR #4255)
  * Update documentation for SurvivalProbabilty to be more clear
    (Issue #4247)