@@ -74,8 +74,9 @@ class GMSParser(TopologyReaderBase):
      - atomic charges
 
     .. versionadded:: 0.9.1
-    .. versionchanged:: 2.5.0
-      removed type and mass guessing (guessing takes place now inside the universe only)
+    .. versionchanged:: 2.7.0
+        Removed type and mass guessing (attributes guessing takes place now
+        through universe.guess_TopologyAttributes() API).
     """
     format = 'GMS'
 
