@@ -181,9 +181,9 @@ class DATAParser(TopologyReaderBase):
     see :ref:`atom_style_kwarg`.
 
     .. versionadded:: 0.9.0
-    .. versionchanged:: 2.5.0
-      removed mass guessing (guessing takes place now inside the universe only)
-
+    .. versionchanged:: 2.7.0
+        Removed mass guessing (attributes guessing takes place now
+        through universe.guess_TopologyAttributes() API).
     """
     format = 'DATA'
 
