@@ -90,9 +90,9 @@ class PQRParser(TopologyReaderBase):
        Added parsing of Record types
        Can now read PQR files from Gromacs, these provide atom type as last column
        but don't have segids
-    .. versionchanged:: 2.5.0
-      removed type and mass guessing (guessing takes place now inside the universe only)
-
+    .. versionchanged:: 2.7.0
+        Removed type and mass guessing (attributes guessing takes place now
+        through universe.guess_TopologyAttributes() API).
     """
     format = 'PQR'
 
