@@ -75,9 +75,10 @@ class TXYZParser(TopologyReaderBase):
     - Elements (if all atom names are element symbols)
 
     .. versionadded:: 0.17.0
-    .. versionchanged:: 2.5.0
+    .. versionchanged:: 2.7.0
        Adding the `Element` attribute if all names are valid element symbols.
-      removed mass guessing (guessing takes place now inside the universe only)
+       Removed mass guessing (attributes guessing takes place now
+       through universe.guess_TopologyAttributes() API).
 
     """
     format = ['TXYZ', 'ARC']
