@@ -65,8 +65,9 @@ class XYZParser(TopologyReaderBase):
 
     .. versionchanged: 1.0.0
        Store elements attribute, based on XYZ atom names
-    .. versionchanged:: 2.5.0
-      removed type and mass guessing (guessing takes place now inside the universe only)
+     .. versionchanged:: 2.7.0
+        Removed type and mass guessing (attributes guessing takes place now
+        through universe.guess_TopologyAttributes() API).
 
     """
     format = 'XYZ'
